# provenance

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  provenance.calibrated.raid.yaml  pyproject.toml
.claude/handoffs/: remaining-work.md
.github/workflows/: ci.yml
calibration_models/: calibration_results_raid.json  raid_calibration_summary.json  raid_promotion_summary.json
config/: default_thresholds.yml
docs/: 20260408-raid-calibration.md  20260409-detection-landscape-findings.md  20260409-followup-agent-plan.md  benchmark.md
provenance/: __init__.py  api.py  calibrate.py  cli.py  sentinel.py
provenance/benchmarks/: __init__.py  ensemble_workflow.py  evaluation.py  evaluator.py  loaders.py  metrics.py  models.py  registry.py  reporting.py  run_comprehensive.py  runner.py  workflow.py
provenance/core/: base.py  calibration.py  config.py  ensemble.py  errors.py  preprocessor.py  pytorch_utils.py  registry.py  statistics.py
provenance/detectors/llm/: __init__.py  llm_detectors.py
provenance/detectors/statistical/: __init__.py  burstiness.py  curvature.py  entropy.py  perplexity.py  repetition.py  surprisal.py
provenance/detectors/stylometric/: __init__.py  cognitive.py  feature_extractor.py  lightgbm_detector.py
provenance/detectors/transformer/: __init__.py  hf_classifier.py  train_raid.py
provenance/domains/: __init__.py  academic.py  code.py  multilingual.py
provenance/explainability/: __init__.py  heatmaps.py
tests/: __init__.py  conftest.py  test_api.py  test_base.py  test_benchmarks.py  test_calibration.py  test_cli.py  test_config.py  test_domains.py  test_ensemble.py  test_ensemble_workflow.py  test_heatmaps.py  test_integration.py  test_preprocessor.py  test_registry.py  test_sentinel.py  test_statistical_detectors.py  test_stylometric.py
